Refactor,debugging